wxc/include/ewxw/wxc_glue.h



/* wxFrame */
TClassDefExtend(wxFrame,wxWindow)
TClass(wxFrame) wxFrame_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), int _stl );

TClass(wxStatusBar) wxFrame_CreateStatusBar( TSelf(wxFrame) _obj, int number, int style );

TClass(wxToolBar)   wxFrame_CreateToolBar( TSelf(wxFrame) _obj, long style );

int        wxFrame_GetClientAreaOrigin_left( TSelf(wxFrame) _obj );

int        wxFrame_GetClientAreaOrigin_top( TSelf(wxFrame) _obj );

TClass(wxIcon) wxFrame_GetIcon( TSelf(wxFrame) _obj );

TClass(wxMenuBar) wxFrame_GetMenuBar( TSelf(wxFrame) _obj );

TClass(wxStatusBar) wxFrame_GetStatusBar( TSelf(wxFrame) _obj );

TClass(wxToolBar) wxFrame_GetToolBar( TSelf(wxFrame) _obj );

void       wxFrame_Iconize( TSelf(wxFrame) _obj );

TBool      wxFrame_IsIconized( TSelf(wxFrame) _obj );

TBool      wxFrame_IsMaximized( TSelf(wxFrame) _obj );

void       wxFrame_Maximize( TSelf(wxFrame) _obj );

void       wxFrame_Restore( TSelf(wxFrame) _obj );

void       wxFrame_SetIcon( TSelf(wxFrame) _obj, TClass(wxIcon) _icon );

void       wxFrame_SetIcons( TSelf(wxFrame) _obj, void* _icons );

void       wxFrame_SetMenuBar( TSelf(wxFrame) _obj, TClass(wxMenuBar) menubar );

void       wxFrame_SetStatusBar( TSelf(wxFrame) _obj, TClass(wxStatusBar) statBar );

void       wxFrame_SetStatusText( TSelf(wxFrame) _obj, TString _txt, int _number );

void       wxFrame_SetStatusWidths( TSelf(wxFrame) _obj, int _n, void* _widths_field );

void       wxFrame_SetToolBar( TSelf(wxFrame) _obj, TClass(wxToolBar) _toolbar );